--- a/index.html
+++ b/index.html
@@ -9,6 +9,85 @@
     <title>Federico Batalla Portfolio</title>
 </head>
 <body>
-    
+    <header>
+        <div class="contenedor">
+            <div class="logo">
+                <p>Federico Batalla</p>
+            </div>
+            <div class="nav">
+                <ul>
+                    <li>home</li>
+                    <li>Sobre mi</li>
+                    <li>Skill</li>
+                    <li>Resumen</li>
+                    <li>Portfolio</li>
+                    <li>Contacto</li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <section class="home">
+        <div class="contenedor">
+            <div class="imagen">
+                <img src="img/perfil.jpg" alt="Imagen de federico batalla" width="180px">
+            </div>
+            <div class="titulo">
+                <h1>Federico Batalla</h1>
+                <h2>Programador Web Full Stack</h2>
+            </div>
+            <div class="redes-sociales">
+                <p>insta</p>
+                <p>twitter</p>
+                <p>link</p>
+                <p>facebook</p>
+                <p>github</p>
+            </div>
+        </div>
+    </section>
+    <section class="sobre-mi">
+        <div class="contenedor">
+            <div class="presentacion">
+                <p>imagen</p>
+                <h3>sobre mi</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure recusandae ab, tempore exercitationem eos qui? Porro possimus numquam labore itaque sint, necessitatibus, sequi repudiandae, error fuga soluta sapiente ex consequatur!</p>
+            </div>
+            <div class="detalle-personal">
+                <h4>Detalle Personal</h4>
+                <p><span class="detalle">Fecha de nacimiento</span> 01-01-1989</p>
+                <p><span class="detalle">Telefono</span>5492901415392</p>
+                <p><span class="detalle">Email</span>Fedem.b23@gmail.com</p>
+                <p><span class="detalle">Website</span>www.federico.com</p>
+                <p><span class="detalle">Direccion</span>Antiguos Leñadores 51 b</p>
+                <p><span class="detalle">Estado de Trabajo</span><span class="free">Freelance</span></p>
+            </div>
+            <div class="mis intereses">
+                <h4>Mis intereses</h4>
+                <div class="contenedor-iconos">
+                    <p>icono</p>
+                    <p>icono</p>
+                    <p>icono</p>
+                    <p>icono</p>
+                    <p>icono</p>
+                    <p>icono</p>
+                    <p>icono</p>
+                    <p>icono</p>
+                </div>
+            </div>
+            <div class="boton">
+                <button>Descargar CV</button>
+            </div>
+        </div>
+    </section>
+    <section class="skill">
+        <div class="contenedor">
+            <div class="skill">
+                <p>icono</p>
+                <h3>Skill</h3>
+            </div>
+            <div class="skill tecnico">
+                
+            </div>
+        </div>
+    </section>
 </body>
 </html>
