--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@700&family=Open+Sans&display=swap"
+        rel="stylesheet">
+        <script src="https://kit.fontawesome.com/b9a0709add.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Federico Batalla Portfolio</title>
@@ -18,17 +20,17 @@
         <div class="contenedor">
             <div class="contenedor-logo">
                 <div class="logo">
-                  <p>Federico Batalla</p>  
+                    <p>Federico Batalla</p>
                 </div>
-                
+
             </div>
             <nav class="contenedor-menu">
                 <div class="menu">
                     <a href="#">Home</a>
                     <a href="#">Sobre mi</a>
-                    <a href="#">Skill</a> 
+                    <a href="#">Skill</a>
                 </div>
-               
+
             </nav>
 
         </div>
@@ -36,20 +38,23 @@
     </header>
     <section class="home">
         <div class="contenedor">
-            <div class="imagen">
-                <img src="img/perfil.jpg" alt="Imagen de federico batalla" width="180px">
+            <div class="contenedor-tarjeta">
+                <div class="imagen">
+                    <img src="img/descarga.jfif" alt="Imagen de federico batalla">
+                </div>
+
+                <div class="titulo">
+                    <h1>Federico Batalla</h1>
+                    <h2>Programador Web Full Stack</h2>
+                </div>
+
+                <div class="redes-sociales">
+                    <a href="#" class="instagram"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#" class="facebook"><i class="fa-brands fa-facebook"></i></a>
+                </div>
             </div>
-            <div class="titulo">
-                <h1>Federico Batalla</h1>
-                <h2>Programador Web Full Stack</h2>
-            </div>
-            <div class="redes-sociales">
-                <p>insta</p>
-                <p>twitter</p>
-                <p>link</p>
-                <p>facebook</p>
-                <p>github</p>
-            </div>
+
         </div>
     </section>
     <section class="sobre-mi">
