--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@700&family=Open+Sans&display=swap"
         rel="stylesheet">
-        <script src="https://kit.fontawesome.com/b9a0709add.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/b9a0709add.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Federico Batalla Portfolio</title>
@@ -60,50 +61,87 @@
     <section class="sobre-mi">
         <div class="contenedor">
             <div class="presentacion">
-                <p>imagen</p>
-                <h3>sobre mi</h3>
+                <i class="fa-solid fa-circle-info"></i>
+                <h3>Sobre mi</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure recusandae ab, tempore exercitationem
                     eos qui? Porro possimus numquam labore itaque sint, necessitatibus, sequi repudiandae, error fuga
                     soluta sapiente ex consequatur!</p>
             </div>
-            <div class="detalle-personal">
-                <h4>Detalle Personal</h4>
-                <p><span class="detalle">Fecha de nacimiento</span> 01-01-1989</p>
-                <p><span class="detalle">Telefono</span>5492901415392</p>
-                <p><span class="detalle">Email</span>Fedem.b23@gmail.com</p>
-                <p><span class="detalle">Website</span>www.federico.com</p>
-                <p><span class="detalle">Direccion</span>Antiguos Leñadores 51 b</p>
-                <p><span class="detalle">Estado de Trabajo</span><span class="free">Freelance</span></p>
-            </div>
-            <div class="mis intereses">
-                <h4>Mis intereses</h4>
-                <div class="contenedor-iconos">
-                    <p>icono</p>
-                    <p>icono</p>
-                    <p>icono</p>
-                    <p>icono</p>
-                    <p>icono</p>
-                    <p>icono</p>
-                    <p>icono</p>
-                    <p>icono</p>
+            <div class="contenedor-detalle">
+                <div class="detalle-personal">
+
+                    <div class="prg">
+                        <h4>Detalle Personal</h4>
+                        <p>Fecha de nacimiento</p>
+                        <p>Telefono</p>
+                        <p>Email</p>
+                        <p>Website</p>
+                        <p>Direccion</p>
+                        <p>Estado de Trabajo</p>
+                    </div>
+                    <div class="rta">
+                        <p> 01-01-1989</p>
+                        <p>5492901415392</p>
+                        <p>Fedem.b23@gmail.com</p>
+                        <p>www.federico.com</p>
+                        <p>Antiguos Leñadores 51 b</p>
+                        <p><span class="verde">freelance</span></p>
+                    </div>
+
+                </div>
+                <div class="mis-intereses">
+                    <div class="cont">
+                        <h4>Mis intereses</h4>
+                        <div class="contenedor-iconos">
+                            <div class="linea">
+                                <div class="contenedor-dibujos">
+                                    <i class="fa-sharp fa-solid fa-graduation-cap"></i>
+                                    <p>Learnign</p>
+                                </div>
+                                <div class="contenedor-dibujos">
+                                    <i class="fa-solid fa-house-laptop"></i>
+                                    <p>Learnign</p>
+                                </div>
+                                <div class="contenedor-dibujos">
+                                    <i class="fa-solid fa-music"></i>
+                                    <p>Learnign</p>
+                                </div>
+                            </div>
+                            <div class="linea">
+                                <div class="contenedor-dibujos">
+                                    <i class="fa-solid fa-plane"></i>
+                                    <p>Learnign</p>
+                                </div>
+                                <div class="contenedor-dibujos">
+                                    <i class="fa-solid fa-gamepad"></i>
+                                    <p>Learnign</p>
+                                </div>
+                                <div class="contenedor-dibujos">
+                                    <i class="fa-solid fa-film"></i>
+                                    <p>Learnign</p>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="boton">
-                <button>Descargar CV</button>
+                <button>Descargar CV <i class="fa-solid fa-download"></i></button>
             </div>
         </div>
     </section>
     <section class="skill">
         <div class="contenedor">
             <div class="skill">
-                <p>icono</p>
-                <h3>Skill</h3>
+                
             </div>
             <div class="skill tecnico">
-
+                
             </div>
         </div>
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 
 </html>
