--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
                             <div class="container">
                                 <div class="row">
                                     <div class="col contenedor-red">
-                                        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                                        <a href="#" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
                                     </div>
                                     <div class="col contenedor-red">
-                                        <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                                        <a href="#" class="what"><i class="fa-brands fa-whatsapp"></i></a>
                                     </div>
                                     <div class="col contenedor-red">
-                                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                        <a href="#" class="insta"><i class="fa-brands fa-instagram"></i></a>
                                     </div>
                                 </div>
                             </div>
