sobre mi en proceso

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <p>Federico Batalla</p>
                 </div>
                 <div class="col-sm-12 col-md-8 nave">
-                    <a href="#">HOME</a>
+                    <a href="#main">HOME</a>
                     <a href="#">SOBRE MI</a>
                     <a href="#">SKILL</a>
                     <a href="#">RESUMEN</a>
@@ -54,13 +54,13 @@
                             <div class="container">
                                 <div class="row">
                                     <div class="col contenedor-red">
-                                        <a href="#" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
+                                        <a href="https://www.linkedin.com/in/federico-matias-batalla/" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
                                     </div>
                                     <div class="col contenedor-red">
-                                        <a href="#" class="what"><i class="fa-brands fa-whatsapp"></i></a>
+                                        <a href="https://wa.me/5492901415392?text=Hola%20Federico,%20me%20comunico%20por%20que%20vi%20tu%20portfolio%20web%20y%20me%20interesa%20tu%20perfil" class="what" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
                                     </div>
                                     <div class="col contenedor-red">
-                                        <a href="#" class="insta"><i class="fa-brands fa-instagram"></i></a>
+                                        <a href="https://www.instagram.com/fedemb89/" class="insta" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -71,6 +71,108 @@
             </div>
         </div>
     </main>
+    <section class="sobre-mi">
+        <div class="container">
+            <div class="row icono">
+                <div class="col-4 contenedor-icono">
+                    <i class="fa-solid fa-circle-info"></i>
+                    <h2>Sobre Mi</h2>
+                </div>
+            </div>
+            <div class="row presentacion">
+                <div class="col-12">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error ad assumenda fugiat odit voluptatem et rerum doloremque fugit, nemo, ea ullam exercitationem sed quam reiciendis unde pariatur! Deserunt, earum nemo!</p>
+                </div>
+            </div>
+            <div class="row datos">
+                <div class="col-6 detalles-personales">
+                    <div class="row">
+                        <h3>Detalles Personales</h3>
+                    </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <p>Fecha de Nacimiento</p>
+                            <p>Telefono</p>
+                            <p>Email</p>
+                            <p>Website</p>
+                            <p>Direccion</p>
+                            <p>Estado de Trabajo</p>
+                        </div>
+                        <div class="col-6">
+                            <p>01-01-1989</p>
+                            <p>2901415392</p>
+                            <p>Fedem.b23@gmail.com</p>
+                            <p>federico.com</p>
+                            <p>Ushuaia,Tierra del Fuego</p>
+                            <p>Frreelance</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 mis-intereses">
+                    <div class="row">
+                        <h3>Mis Intereses</h3>
+                    </div>
+                    <div class="row">
+                        <div class="col-3">
+                            <div class="contenedor-icon">
+                                <i class="fa-solid fa-gamepad"></i>
+                                <p>game</p>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="contenedor-icon">
+                                <i class="fa-solid fa-gamepad"></i>
+                                <p>game</p>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="contenedor-icon">
+                                <i class="fa-solid fa-gamepad"></i>
+                                <p>game</p>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="contenedor-icon">
+                                <i class="fa-solid fa-gamepad"></i>
+                                <p>game</p>
+                            </div>
+                        </div>
+                        
+                    </div>
+                    <div class="row">
+                        <div class="col-3">
+                            <div class="contenedor-icon">
+                                <i class="fa-solid fa-gamepad"></i>
+                                <p>game</p>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="contenedor-icon">
+                                <i class="fa-solid fa-gamepad"></i>
+                                <p>game</p>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="contenedor-icon">
+                                <i class="fa-solid fa-gamepad"></i>
+                                <p>game</p>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="contenedor-icon">
+                                <i class="fa-solid fa-gamepad"></i>
+                                <p>game</p>
+                            </div>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+            <div class="row boton-cv">
+                <a href="#">Descargar CV <i class="fa-solid fa-download"></i> </a>
+            </div>
+        </div>
+    </section>
 
     <script src="https://kit.fontawesome.com/b9a0709add.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
