sobre mi en proceso 2

--- a/index.html
+++ b/index.html
@@ -57,11 +57,15 @@
                                         <a href="https://www.linkedin.com/in/federico-matias-batalla/" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
                                     </div>
                                     <div class="col contenedor-red">
+                                        <a href="https://github.com/federico-batalla" class="git" target="_blank"><i class="fa-brands fa-github"></i></a>
+                                    </div>
+                                    <div class="col contenedor-red">
                                         <a href="https://wa.me/5492901415392?text=Hola%20Federico,%20me%20comunico%20por%20que%20vi%20tu%20portfolio%20web%20y%20me%20interesa%20tu%20perfil" class="what" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
                                     </div>
                                     <div class="col contenedor-red">
                                         <a href="https://www.instagram.com/fedemb89/" class="insta" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                                     </div>
+                                    
                                 </div>
                             </div>
                         </div>
@@ -86,11 +90,11 @@
             </div>
             <div class="row datos">
                 <div class="col-6 detalles-personales">
-                    <div class="row">
+                    <div class="row contenedor-sub">
                         <h3>Detalles Personales</h3>
                     </div>
-                    <div class="row">
-                        <div class="col-6">
+                    <div class="row contenedor-detalles">
+                        <div class="col-4 preguntas">
                             <p>Fecha de Nacimiento</p>
                             <p>Telefono</p>
                             <p>Email</p>
@@ -98,21 +102,21 @@
                             <p>Direccion</p>
                             <p>Estado de Trabajo</p>
                         </div>
-                        <div class="col-6">
+                        <div class="col-8 respuestas">
                             <p>01-01-1989</p>
                             <p>2901415392</p>
                             <p>Fedem.b23@gmail.com</p>
                             <p>federico.com</p>
                             <p>Ushuaia,Tierra del Fuego</p>
-                            <p>Frreelance</p>
+                            <p><span class="verde">Freelance</span> <span class="verde">Escuchando Propuestas</span>  </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-6 mis-intereses">
-                    <div class="row">
+                    <div class="row intereses-sub">
                         <h3>Mis Intereses</h3>
                     </div>
-                    <div class="row">
+                    <div class="row primera-fila">
                         <div class="col-3">
                             <div class="contenedor-icon">
                                 <i class="fa-solid fa-gamepad"></i>
@@ -139,7 +143,7 @@
                         </div>
                         
                     </div>
-                    <div class="row">
+                    <div class="row segunda-fila">
                         <div class="col-3">
                             <div class="contenedor-icon">
                                 <i class="fa-solid fa-gamepad"></i>
